- Fix the table display on mobile - Modify CSS of header and font.

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,2 +1,1 @@
 // Typography Rules
-$base-font-size: 0.875em;
