--- a/src/styles/utilities/_fonts.scss
+++ b/src/styles/utilities/_fonts.scss
@@ -1,1 +1,3 @@
 // Font Import
+$base-font-size: 1em;
+$small-font-size: 0.75em;
